--- a/index.html
+++ b/index.html
@@ -65,6 +65,63 @@
           </button>
         </div>
       </section>
+
+      <!-- секция Features -->
+      <section class="section-padding">
+        <div class="container">
+          <h2 hidden class="sec-three">Features</h2>
+          <ul class="cards list">
+            <li class="cards-features">
+              <div class="cards-icons">
+                <svg class="icons-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="sec-h-two strategy-margin">Strategy</h3>
+              <p class="sec-p-two">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="cards-features">
+              <div class="cards-icons">
+                <svg class="icons-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="sec-h-two">Punctuality</h3>
+              <p class="sec-p-two">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="cards-features">
+              <div class="cards-icons">
+                <svg class="icons-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="sec-h-two">Diligence</h3>
+              <p class="sec-p-two">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="cards-features">
+              <div class="cards-icons">
+                <svg class="icons-features" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="sec-h-two">Technologies</h3>
+              <p class="sec-p-two">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
