--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="sec-h-two strategy-margin">Strategy</h3>
+              <h3 class="sec-h-two">Strategy</h3>
               <p class="sec-p-two">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -107,7 +107,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="cards-features">
+            <li class="cards-features cards-bottom">
               <div class="cards-icons">
                 <svg class="icons-features" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -122,6 +122,430 @@
           </ul>
         </div>
       </section>
+
+      <section class="sec-one">
+        <div class="container">
+          <h2 class="sec-three">What are we doing</h2>
+          <ul class="card-work list">
+            <li class="work">
+              <img
+                class="block"
+                src="./images/img_1.jpg"
+                alt="computer-working"
+                width="360"
+              />
+            </li>
+            <li class="work">
+              <img
+                class="block"
+                src="./images/img_2.jpg"
+                alt="telefon-watsapp"
+                width="360"
+              />
+            </li>
+            <li class="work">
+              <img
+                class="block"
+                src="./images/img_3.jpg"
+                alt="computer-working"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="sec-fon">
+        <div class="container">
+          <h2 class="sec-four-h">Our Team</h2>
+          <ul class="team list">
+            <li class="team-li secfour-li">
+              <img
+                class="block"
+                src="./images/img1.jpg"
+                alt="men"
+                width="264"
+              />
+              <div class="team-text">
+                <h3 class="sec-h">Mark Guerrero</h3>
+                <p class="sec-p">Product Designer</p>
+                <ul class="list social-group">
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-li secfour-li">
+              <img
+                class="block"
+                src="./images/img2.jpg"
+                alt="men"
+                width="264"
+              />
+              <div class="team-text">
+                <h3 class="sec-h">Tom Ford</h3>
+                <p class="sec-p">Frontend Developer</p>
+                <ul class="list social-group">
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-li secfour-li">
+              <img
+                class="block"
+                src="./images/img3.jpg"
+                alt="women"
+                width="264"
+              />
+              <div class="team-text">
+                <h3 class="sec-h">Camila Garcia</h3>
+                <p class="sec-p">Marketing</p>
+                <ul class="list social-group">
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-li secfour-li">
+              <img
+                class="block"
+                src="./images/img4.jpg"
+                alt="men"
+                width="264"
+              />
+              <div class="team-text">
+                <h3 class="sec-h">Daniel Wilson</h3>
+                <p class="sec-p">UI Designer</p>
+                <ul class="list social-group">
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a class="link soc-link" href=""
+                      ><svg class="soc-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="sec-fon non-padding">
+        <div class="container">
+          <h2 class="sec-four-h">Customers</h2>
+          <ul class="customers-icons list">
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers">
+              <a class="link customers-a" href=""
+                ><svg class="customers-company" width="104" height="56">
+                  <use href="./images/icons.svg#icon-group6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+
+    <footer class="underground">
+      <div class="container footer-box">
+        <div class="right">
+          <a href="./index.html" class="studio-footer link"
+            >Web<span class="under">Studio</span></a
+          >
+          <p class="under">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="left">
+          <p class="under-social">Social media</p>
+          <ul class="list footer-group">
+            <li class="width-height">
+              <a class="link footer-icons" href=""
+                ><svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="width-height">
+              <a class="link footer-icons" href=""
+                ><svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="width-height">
+              <a class="link footer-icons" href=""
+                ><svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="width-height">
+              <a class="link footer-icons" href=""
+                ><svg class="footer-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="form-f">
+          <p class="subscribe-p">Subscribe</p>
+          <form class="form-display">
+            <label for="email-f" class="subscribe-label">
+              <input
+                id="email-f"
+                class="subscribe-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="send-footer" type="submit">
+              Subscribe
+              <svg class="send-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </footer>
+
+    <div data-modal class="backdrop is-hidden">
+      <div class="modal">
+        <button data-modal-close class="button-modal" type="button">
+          <svg class="vector" width="8" height="8">
+            <use href="./images/icons.svg#icon-vector"></use>
+          </svg>
+        </button>
+        <p class="label-p">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="modal-field">
+            <label for="user-name" class="label-style">
+              <span class="span-text">Name</span>
+            </label>
+            <div class="input-wrap">
+              <input
+                id="user-name"
+                class="input-style"
+                type="text"
+                name="user-name"
+              />
+              <svg class="input-wrap-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-object"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user-phone" class="label-style">
+              <span class="span-text">Phone</span>
+            </label>
+            <div class="input-wrap">
+              <input
+                id="user-phone"
+                class="input-style"
+                type="tel"
+                name="user-phone"
+              />
+              <svg class="input-wrap-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user-email" class="label-style">
+              <span class="span-text">Email</span>
+            </label>
+            <div class="input-wrap">
+              <input
+                id="user-email"
+                class="input-style"
+                type="email"
+                name="user-email"
+              />
+              <svg class="input-wrap-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field-two">
+            <label for="user-comment" class="label-style">
+              <span class="span-text">Comment</span>
+            </label>
+            <textarea
+              id="user-comment"
+              class="text-input"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="check-box">
+            <input
+              class="check-input visually-hidden"
+              value="true"
+              id="user-privacy"
+              type="checkbox"
+              name="user-privacy"
+            />
+            <label class="check-text" for="user-privacy">
+              <span class="modal-span-svg">
+                <svg class="galka-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-galka"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the &nbsp;
+              <a class="privacy-link link" href="">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="send" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
