--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             </li>
           </ul>
         </nav>
+        <button class="menu-mobile-open js-open-menu" type="button">
+          <svg class="mobile-svg-menu" width="32" height="22">
+            <use href="./images/icons.svg#menu-mobile"></use>
+          </svg>
+        </button>
         <address class="font">
           <ul class="adres list">
             <li class="item mail-tel-tablet">
@@ -53,8 +58,78 @@
           </ul>
         </address>
       </div>
+      <!-- *MOBILE MENU  -->
+      <div class="mob-menu js-menu-container">
+        <div>
+          <button class="menu-mobile-close js-close-menu" type="button">
+            <svg class="svg-menu" width="8" height="8">
+              <use href="./images/icons.svg#icon-vector"></use>
+            </svg>
+          </button>
+
+          <ul class="mob-menu-ul list">
+            <li class="mob-menu-item">
+              <a href="./index.html" class="link mob-nav current">Studio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="./portfolio.html" class="link mob-nav">Portfolio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="" class="link mob-nav">Contacts</a>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <address class="font">
+            <ul class="mob-menu-adres list">
+              <li class="mob-menu-telmail">
+                <a href="tel:+110001111111" class="tel-style link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mob-menu-telmail">
+                <a href="mailto:info@devstudio.com" class="mail-style link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="list mob-social-group">
+            <li class="social">
+              <a class="link soc-link" href=""
+                ><svg class="soc-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social">
+              <a class="link soc-link" href=""
+                ><svg class="soc-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social">
+              <a class="link soc-link" href=""
+                ><svg class="soc-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social">
+              <a class="link soc-link" href=""
+                ><svg class="soc-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
-    <!-- поле с фоном и кнопокй -->
+
+    <!--* поле с фоном и кнопокй -->
 
     <main>
       <section class="section overlay">
@@ -454,7 +529,7 @@
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close class="button-modal" type="button">
-          <svg class="vector" width="8" height="8">
+          <svg class="position: absolute;" width="8" height="8">
             <use href="./images/icons.svg#icon-vector"></use>
           </svg>
         </button>
@@ -547,5 +622,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
