--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,11 @@
             </li>
           </ul>
         </nav>
+        <button class="menu-mobile-open js-open-menu" type="button">
+          <svg class="mobile-svg-menu" width="32" height="22">
+            <use href="./images/icons.svg#menu-mobile"></use>
+          </svg>
+        </button>
         <address class="font">
           <ul class="adres list">
             <li class="item">
