--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-li secfour-li">
+            <li class="team-li secfour-li padding-plus">
               <img
                 class="block"
                 src="./images/img3.jpg"
