--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <img
                 class="block"
                 src="./images/img_2.jpg"
-                alt="telefon-watsapp"
+                alt="computer-working"
                 width="360"
               />
             </li>
@@ -235,12 +235,33 @@
           <h2 class="sec-four-h">Our Team</h2>
           <ul class="team list">
             <li class="team-li secfour-li">
-              <img
-                class="block"
-                src="./images/img1.jpg"
-                alt="men"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img-desc1.jpg x1,
+                  ./images/img-desc1-x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="
+                  ./images/img-tab1.jpg x1,
+                  ./images/img-tab1-x2.jpg x2"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                  ./images/img1.jpg x1,
+                  ./images/img-mob1-x2.jpg x2"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img1.jpg"
+                  alt="men"
+                  width="264"
+                />
+              </picture>
+
               <div class="team-text">
                 <h3 class="sec-h">Mark Guerrero</h3>
                 <p class="sec-p">Product Designer</p>
@@ -277,12 +298,33 @@
               </div>
             </li>
             <li class="team-li secfour-li">
-              <img
-                class="block"
-                src="./images/img2.jpg"
-                alt="men"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img-desc2.jpg x1,
+                  ./images/img-desc2-x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="
+                  ./images/img-tab2.jpg x1,
+                  ./images/img-tab2-x2.jpg x2"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                  ./images/img2.jpg x1,
+                  ./images/img-mob2-x2.jpg x2"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img2.jpg"
+                  alt="men"
+                  width="264"
+                />
+              </picture>
+
               <div class="team-text">
                 <h3 class="sec-h">Tom Ford</h3>
                 <p class="sec-p">Frontend Developer</p>
@@ -319,12 +361,32 @@
               </div>
             </li>
             <li class="team-li secfour-li padding-plus">
-              <img
-                class="block"
-                src="./images/img3.jpg"
-                alt="women"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img-desc3.jpg x1,
+                  ./images/img-desc3-x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="
+                  ./images/img-tab3.jpg x1,
+                  ./images/img-tab3-x2.jpg x2"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                  ./images/img3.jpg x1,
+                  ./images/img-mob3-x2.jpg x2"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img3.jpg"
+                  alt="men"
+                  width="264"
+                />
+              </picture>
               <div class="team-text">
                 <h3 class="sec-h">Camila Garcia</h3>
                 <p class="sec-p">Marketing</p>
@@ -361,12 +423,32 @@
               </div>
             </li>
             <li class="team-li secfour-li">
-              <img
-                class="block"
-                src="./images/img4.jpg"
-                alt="men"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img-desc4.jpg x1,
+                  ./images/img-desc4-x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="
+                  ./images/img-tab4.jpg x1,
+                  ./images/img-tab4-x2.jpg x2"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                  ./images/img4.jpg x1,
+                  ./images/img-mob4-x2.jpg x2"
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img4.jpg"
+                  alt="men"
+                  width="264"
+                />
+              </picture>
               <div class="team-text">
                 <h3 class="sec-h">Daniel Wilson</h3>
                 <p class="sec-p">UI Designer</p>
