--- a/index.html
+++ b/index.html
@@ -203,28 +203,52 @@
           <h2 class="sec-three">What are we doing</h2>
           <ul class="card-work list">
             <li class="work">
-              <img
-                class="block"
-                src="./images/img_1.jpg"
-                alt="computer-working"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img_1.jpg x1,
+                  ./images/img_1x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img_1.jpg"
+                  alt="computer-working"
+                  width="360"
+                />
+              </picture>
             </li>
             <li class="work">
-              <img
-                class="block"
-                src="./images/img_2.jpg"
-                alt="computer-working"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img_2.jpg x1,
+                  ./images/img_2x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img_2.jpg"
+                  alt="computer-working"
+                  width="360"
+                />
+              </picture>
             </li>
             <li class="work">
-              <img
-                class="block"
-                src="./images/img_3.jpg"
-                alt="computer-working"
-                width="360"
-              />
+              <picture>
+                <source
+                  srcset="
+                  ./images/img_3.jpg x1,
+                  ./images/img_3x2.jpg x2"
+                  media="(min-width: 1158px)"
+                />
+                <img
+                  class="block"
+                  src="./images/img_3.jpg"
+                  alt="computer-working"
+                  width="360"
+                />
+              </picture>
             </li>
           </ul>
         </div>
