--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
             <li class="work">
               <picture>
                 <source
-                  srcset="
-                  ./images/img_1.jpg x1,
-                  ./images/img_1x2.jpg x2"
+                  srcset="./images/img_1.jpg 1x, ./images/img_1x2.jpg 2x"
                   media="(min-width: 1158px)"
                 />
                 <img
@@ -221,9 +219,7 @@
             <li class="work">
               <picture>
                 <source
-                  srcset="
-                  ./images/img_2.jpg x1,
-                  ./images/img_2x2.jpg x2"
+                  srcset="./images/img_2.jpg 1x, ./images/img_2x2.jpg 2x"
                   media="(min-width: 1158px)"
                 />
                 <img
@@ -237,9 +233,7 @@
             <li class="work">
               <picture>
                 <source
-                  srcset="
-                  ./images/img_3.jpg x1,
-                  ./images/img_3x2.jpg x2"
+                  srcset="./images/img_3.jpg 1x, ./images/img_3x2.jpg 2x"
                   media="(min-width: 1158px)"
                 />
                 <img
@@ -262,20 +256,17 @@
               <picture>
                 <source
                   srcset="
-                  ./images/img-desc1.jpg x1,
-                  ./images/img-desc1-x2.jpg x2"
+                    ./images/img-desc1.jpg    1x,
+                    ./images/img-desc1-x2.jpg 2x
+                  "
                   media="(min-width: 1158px)"
                 />
                 <source
-                  srcset="
-                  ./images/img-tab1.jpg x1,
-                  ./images/img-tab1-x2.jpg x2"
+                  srcset="./images/img-tab1.jpg 1x, ./images/img-tab1-x2.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="
-                  ./images/img1.jpg x1,
-                  ./images/img-mob1-x2.jpg x2"
+                  srcset="./images/img1.jpg 1x, ./images/img-mob1-x2.jpg 2x"
                   media="(min-width: 320px)"
                 />
                 <img
@@ -325,20 +316,17 @@
               <picture>
                 <source
                   srcset="
-                  ./images/img-desc2.jpg x1,
-                  ./images/img-desc2-x2.jpg x2"
+                    ./images/img-desc2.jpg    1x,
+                    ./images/img-desc2-x2.jpg 2x
+                  "
                   media="(min-width: 1158px)"
                 />
                 <source
-                  srcset="
-                  ./images/img-tab2.jpg x1,
-                  ./images/img-tab2-x2.jpg x2"
+                  srcset="./images/img-tab2.jpg 1x, ./images/img-tab2-x2.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="
-                  ./images/img2.jpg x1,
-                  ./images/img-mob2-x2.jpg x2"
+                  srcset="./images/img2.jpg 1x, ./images/img-mob2-x2.jpg 2x"
                   media="(min-width: 320px)"
                 />
                 <img
@@ -388,20 +376,17 @@
               <picture>
                 <source
                   srcset="
-                  ./images/img-desc3.jpg x1,
-                  ./images/img-desc3-x2.jpg x2"
+                    ./images/img-desc3.jpg    1x,
+                    ./images/img-desc3-x2.jpg 2x
+                  "
                   media="(min-width: 1158px)"
                 />
                 <source
-                  srcset="
-                  ./images/img-tab3.jpg x1,
-                  ./images/img-tab3-x2.jpg x2"
+                  srcset="./images/img-tab3.jpg 1x, ./images/img-tab3-x2.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="
-                  ./images/img3.jpg x1,
-                  ./images/img-mob3-x2.jpg x2"
+                  srcset="./images/img3.jpg 1x, ./images/img-mob3-x2.jpg 2x"
                   media="(min-width: 320px)"
                 />
                 <img
@@ -450,20 +435,17 @@
               <picture>
                 <source
                   srcset="
-                  ./images/img-desc4.jpg x1,
-                  ./images/img-desc4-x2.jpg x2"
+                    ./images/img-desc4.jpg    1x,
+                    ./images/img-desc4-x2.jpg 2x
+                  "
                   media="(min-width: 1158px)"
                 />
                 <source
-                  srcset="
-                  ./images/img-tab4.jpg x1,
-                  ./images/img-tab4-x2.jpg x2"
+                  srcset="./images/img-tab4.jpg 1x, ./images/img-tab4-x2.jpg 2x"
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="
-                  ./images/img4.jpg x1,
-                  ./images/img-mob4-x2.jpg x2"
+                  srcset="./images/img4.jpg 1x, ./images/img-mob4-x2.jpg 2x"
                   media="(min-width: 320px)"
                 />
                 <img
